Wed Jan  5 21:09:14 GMT 2005 (njh)
----------------------------------
  * libclamav/message.c:	Fix crash caused when looking for non-existant
			uuencoded files. This happens when the stated encoding
			method is wrong so we have to try all methods and
			including those which will fail

Sat Jan  1 15:56:48 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:		Changes handling of unbalanced quotes in
			multipart headers

Sat Jan  1 12:54:04 GMT 2005 (njh)
----------------------------------
  * libclamav/message.c:	Some uuencoded viruses were getting through

Thu Dec 30 14:06:03 GMT 2004 (njh)
----------------------------------
  * contrib/init/NetBSD2.0:	Added startup and shutdown scripts for NetBSD2.0

Tue Dec 28 16:26:49 GMT 2004 (njh)
----------------------------------
  * clamav-milter/INSTALL:	Added instructions for FreeBSD5.3
    contrib/init/FreeBSD5.2:	Clarified installation instructions - tested
			under FreeBSD5.3

Mon Dec 27 05:12:29 CET 2004 (tk)
---------------------------------
  * freshclam/manager.c: Remove "Cache-Control: no-cache" from remote_cvdhead()
			 Users behind proxies should only use the DNS method
			 (now default, hardcoded)

Mon Dec 27 05:01:54 CET 2004 (tk)
---------------------------------
  * freshclam/manager.c: use If-Modified-Since in --no-dns mode (based on code
			 by Reini Urban <rurban*x-ray.at>)

Mon Dec 27 01:09:20 CET 2004 (tk)
---------------------------------
  * libclamav/scanners.c: Add missing ArchiveBlockMax rule for recursion limit
			  (reported by HR <haavard*zyf.no-ip.org>)

Wed Dec 22 16:08:49 GMT 2004 (trog)
-----------------------------------
  * sigtool/vba.c: Add some more Word6 tokens.

  * libclamav/htmlnorm.c: Don't set execute bit on temp files.

Tue Dec 21 18:42:44 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Fix fault tolerance problem which could cause
	clamav-milter to attempt to talk to a clamd that was down before
	switching to a working clamd
