@@ -1,3 +1,10 @@
+Wed Jan  5 21:55:49 GMT 2005 (njh)
+----------------------------------
+  * libclamav/message.c:	Guess incorrect content-type, e.g.
+			Content-Type: ultipart/mixed
+				instead of
+			Content-Type: multipart/mixed
+
 Wed Jan  5 21:09:14 GMT 2005 (njh)
 ----------------------------------
   * libclamav/message.c:	Fix crash caused when looking for non-existant
